--- a/src/app/fcomponents/basic/navbar/navbar.component.css
+++ b/src/app/fcomponents/basic/navbar/navbar.component.css
@@ -32,6 +32,8 @@ a{
 }
 .dropdown-item{
     cursor: pointer;
+    padding:0px;
+    padding-left: 0.7rem;
 }
 .dropdown-menu{
     top: 30px;
@@ -59,6 +61,9 @@ a{
 /* TODO: move to global css */
 @media (max-width: 991px) {
     .s2bold > h1 {
-        font-size:0.5rem;
+        font-size:0.7rem;
+    }
+    .dropdown-item{
+        padding: 0.7rem 0.7rem;
     }
 }
