--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -14,7 +14,7 @@
       <!--!Hire dropdown-->
       <li class="nav-item dropdown">
         <div class="nav-link dropdown-toggle s2bold" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false" data-offset="-100,-50">
+          aria-haspopup="true" aria-expanded="false">
           <h1 class="s2bold">Hire</h1>
         </div>
         <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink">
@@ -84,7 +84,7 @@
       <!--!Gallery-->
       <li class="nav-item dropdown">
         <div class="nav-link dropdown-toggle s2bold" id="navbarDropdownMenuLink2" role="button" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false" data-offset="-100,-50">
+          aria-haspopup="true" aria-expanded="false">
           <h1 class="s2bold">Gallery</h1>
         </div>
         <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink2">
