--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -47,7 +47,7 @@
               <div class="row">
                 <div class="col-3" *ngFor="let spe of specials">
                   <div class="h490">
-                      <img src="../../../../assets/Products/{{spe.productMedia[0].url}}.jpg"
+                    <img src="../../../../assets/Products/{{spe.productMedia[0].url}}.jpg"
                       [routerLink]="[ '/product/', spe.prodId]">
                   </div>
                   <div class="s1">{{spe.title}}</div>
@@ -61,8 +61,10 @@
             <div class="d-block d-md-none">
               <div class="row">
                 <div class="col-6" *ngFor="let spe of specials">
-                  <img src="../../../../assets/Products/{{spe.productMedia[0].url}}.jpg" class="img100"
-                    [routerLink]="[ '/product/', spe.prodId]">
+                  <div class="h490">
+                    <img src="../../../../assets/Products/{{spe.productMedia[0].url}}.jpg" class="img100"
+                      [routerLink]="[ '/product/', spe.prodId]">
+                  </div>
                   <div class="s1">{{spe.title}}</div>
                   <div><span class="s2goldbold mr-3">${{spe.price - spe.discount}}</span><s>${{spe.price}}</s></div>
                 </div>
