--- a/src/app/fcomponents/AdminDialogs/CartDialog/CartDialog.component.html
+++ b/src/app/fcomponents/AdminDialogs/CartDialog/CartDialog.component.html
@@ -2,18 +2,18 @@
 
 <mat-dialog-content>
   <!-- Question -->
-  <div class="form-group">
+  <!-- <div class="form-group">
       <input  class="form-control" type="Question" name="Question" placeholder="Question *" [(ngModel)]="faqForm.Question" #Question="ngModel">
-   </div>
+   </div> -->
    <!-- Answer -->
-   <div class="form-group">
+   <!-- <div class="form-group">
       <input class="form-control" type="tel" name="Answer" placeholder="Answer *" [(ngModel)]="faqForm.Answer" #Answer="ngModel">
-   </div>
-
+   </div> -->
+   This is Cart Dialog.
 </mat-dialog-content>
 
 <mat-dialog-actions>
   <button class="mat-raised-button"(click)="close()">Close</button>
-  <button class="mat-raised-button mat-primary"(click)="save()" *ngIf="status == 'update'">Save</button>
-  <button class="mat-raised-button mat-primary"(click)="create()" *ngIf="status == 'create'" [disabled]="faqForm.Answer == '' || faqForm.Question == ''">Create</button>
+  <!-- <button class="mat-raised-button mat-primary"(click)="save()" *ngIf="status == 'update'">Save</button>
+  <button class="mat-raised-button mat-primary"(click)="create()" *ngIf="status == 'create'" [disabled]="faqForm.Answer == '' || faqForm.Question == ''">Create</button> -->
 </mat-dialog-actions>
