--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -8,14 +8,14 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
         <!-- <div class="carousel-inner" style="height: 60vh"> -->
-        <div class="carousel-inner" #imgScroll>
-          <div class="carousel-item active h-100">
+        <div class="carousel-inner">
+          <div class="carousel-item active homaimg">
             <img src="../../../../assets/images/homep1.jpg" class="d-block w-100 img100" alt="...">
           </div>
-          <div class="carousel-item h-100">
+          <div class="carousel-item homaimg">
             <img src="../../../../assets/images/homep2.jpg" class="d-block w-100 img100" alt="...">
           </div>
-          <div class="carousel-item h-100">
+          <div class="carousel-item homaimg">
             <img src="../../../../assets/images/homep3.jpg" class="d-block w-100 img100" alt="...">
           </div>
         </div>
