--- a/src/app/fcomponents/admin/admin.component.html
+++ b/src/app/fcomponents/admin/admin.component.html
@@ -1,198 +1,252 @@
 <div class="container-fluid">
-    <div class="row">
-      <!-- !sidebar -->
-      <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-        <div class="sidebar-sticky">
-          <ul class="nav flex-column">
-            <li class="nav-item">
-              <a class="nav-link active" id="1" (click)="changeBoard($event)">
-                <i class="fas fa-user-cog"></i>
-                Dashboard <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="2" (click)="changeBoard($event)">
-                <i class="fas fa-shopping-bag"></i>
-                Hires
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="3" (click)="changeBoard($event)">
-                <i class="fas fa-gift"></i>
-                Services
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="4" (click)="changeBoard($event)">
-                <i class="fas fa-briefcase"></i>
-                Packages
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="5" (click)="changeBoard($event)">
-                <i class="fas fa-folder-open"></i>
-                Gallery
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="6" (click)="changeBoard($event)">
-                <i class="far fa-question-circle"></i>
-                Faq
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="7" (click)="changeBoard($event)">
-                <i class="fas fa-shipping-fast"></i>
-                Carts
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-  
-      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-        <!-- !Dashboard -->
-        <div *ngIf="blockCode == '1'">
-          This is Dashboard<br>
-        </div>
+  <div class="row">
+    <!-- !sidebar -->
+    <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+      <div class="sidebar-sticky">
+        <ul class="nav flex-column">
+          <li class="nav-item">
+            <a class="nav-link active" id="1" (click)="changeBoard($event)">
+              <i class="fas fa-user-cog"></i>
+              Dashboard <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="2" (click)="changeBoard($event)">
+              <i class="fas fa-shopping-bag"></i>
+              Hires
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="3" (click)="changeBoard($event)">
+              <i class="fas fa-gift"></i>
+              Services
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="4" (click)="changeBoard($event)">
+              <i class="fas fa-briefcase"></i>
+              Packages
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="5" (click)="changeBoard($event)">
+              <i class="fas fa-folder-open"></i>
+              Gallery
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="6" (click)="changeBoard($event)">
+              <i class="far fa-question-circle"></i>
+              Faq
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="7" (click)="changeBoard($event)">
+              <i class="fas fa-shipping-fast"></i>
+              Carts
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
-        <!-- !Hire || Service || Package-->
-        <div *ngIf="blockCode == '2' || blockCode == '3' || blockCode == '4'">
-          <div class="row mt-3">
-            <div>
-                <div class="d-inline" *ngIf="blockCode == 2"><h2>Hires</h2></div>
-                <div class="d-inline" *ngIf="blockCode == 3"><h2>Services</h2></div>
-                <div class="d-inline" *ngIf="blockCode == 4"><h2>Packages</h2></div>      
-            </div>
-            <div class="pl-3 pt-3">
-              <i class="fas fa-plus" title="Add" (click)="createProduct()"></i>
-            </div>
-          </div>
-          <table class="table">
-            <thead>
-              <tr class="table-secondary">
-                <th scope="col">#</th><th scope="col">Title</th><th scope="col">Subtitle</th><th scope="col" *ngIf="blockCode == 2">Category</th>
-                <th scope="col">totalStock</th><th scope="col">Description</th><th scope="col">Edit</th><th scope="col">Delete</th>
-              </tr>
-            </thead>
-            <tbody *ngIf="displayData">
-              <tr *ngFor="let data of displayData">
-                <td>{{data.prodId}}</td><td>{{data.title}}</td><td>{{data.subTitle}}</td><td *ngIf="blockCode == 2"><div *ngIf="data.category">{{data.category.categoryName}}</div></td>
-                <td>{{data.totalStock}}</td><td>{{data.description}}</td>
-                <td><i class="far fa-edit" (click)="openProduct(data)" title="Edit"></i></td>
-                <td><i class="far fa-trash-alt" title="Delete" (click)="deleteProduct(data)"></i></td></tr>
-              </tbody>
-            </table>
-        </div>
+    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+      <!-- !Dashboard -->
+      <div *ngIf="blockCode == '1'">
+        This is Dashboard<br>
+      </div>
 
-        <!-- !Gallery -->
-        <div *ngIf="blockCode == '5'">
-            <div class="row mt-3">
-              <div><h2>Gallery</h2></div>
-              <div class="pl-3 pt-3"><i class="fas fa-plus" title="Add" (click)="createGallery()"></i></div>
+      <!-- !Hire || Service || Package-->
+      <div *ngIf="blockCode == '2' || blockCode == '3' || blockCode == '4'">
+        <div class="row mt-3">
+          <div>
+            <div class="d-inline" *ngIf="blockCode == 2">
+              <h2>Hires</h2>
             </div>
-            <table class="table">
-              <thead>
-                <tr class="table-secondary">
-                  <th scope="col">Id</th> 
-                  <th scope="col">Customer</th><th scope="col">Event Type</th>
-                  <th scope="col">Description</th>
-                  <th scope="col">Edit</th>
-                  <th scope="col">Delete</th>
-                </tr>
-              </thead>
-              <tbody *ngIf="displayData">
-                <tr *ngFor="let data of displayData">
-                  <td>{{data.prodjectId}}</td><td>{{data.customerName}}</td><td *ngIf="data.eventtype">{{data.eventtype.eventName}}</td>
-                  <td>{{data.description}}</td>
-                  <td><i class="far fa-edit" (click)="openGallery(data)" title="Edit"></i></td>
-                  <td><i class="far fa-trash-alt" title="Delete" (click)="deleteGallery(data)"></i></td>
-                </tr>
-                </tbody>
-              </table>
-        </div>
-
-        <!-- !Faq -->
-        <div *ngIf="blockCode == '6'">
-          <div class="row mt-3">
-            <div><h2>Faq</h2> </div>
-            <div class="pl-3 pt-3">
-                <i class="fas fa-plus" title="Add" (click)="createFaq()"></i>
+            <div class="d-inline" *ngIf="blockCode == 3">
+              <h2>Services</h2>
+            </div>
+            <div class="d-inline" *ngIf="blockCode == 4">
+              <h2>Packages</h2>
             </div>
           </div>
+          <div class="pt-2">
+            <button type="button" class="ml-2" style="border-radius: 5px;" title="Add" (click)="createProduct()">
+              <i class="fas fa-plus"></i>
+              <span>Add</span>
+            </button>
+          </div>
+        </div>
+        <table class="table">
+          <thead>
+            <tr class="table-secondary">
+              <th scope="col">#<span style="font-size:10px;">编号</span></th>
+              <th scope="col">Title<span style="font-size:10px;">标题</span></th>
+              <th scope="col" style="text-align:center;">Subtitle<span style="font-size:10px;">副标题</span></th>
+              <th scope="col" style="text-align:center;">Price<span style="font-size:10px;">价格</span></th>
+              <th scope="col" style="text-align:center;">Discount<span style="font-size:10px;">折后价</span></th>
+              <th scope="col" *ngIf="blockCode == 2" style="text-align:center;">Category<span
+                  style="font-size:10px;">类别</span></th>
+              <th scope="col" style="text-align:center;">Inventory<span style="font-size:10px;">库存</span></th>
+              <th scope="col" style="text-align:center;">Description<span style="font-size:10px;">描述</span></th>
+              <th scope="col" style="text-align:center;">Edit<span style="font-size:10px;">编辑</span></th>
+              <th scope="col" style="text-align:center;">Delete<span style="font-size:10px;">删除</span></th>
+            </tr>
+          </thead>
+          <tbody *ngIf="displayData">
+            <tr *ngFor="let data of displayData">
+              <td>{{data.prodId}}</td>
+              <td>{{data.title}}</td>
+              <td style="text-align:center;">{{data.subTitle}}</td>
+              <td style="text-align:center;">${{data.price}}</td>
+              <td style="text-align:center;">${{data.price - data.discount}}</td>
+              <td *ngIf="blockCode == 2" style="text-align:center;">
+                <div *ngIf="data.category">{{data.category.categoryName}}</div>
+              </td>
+              <td style="text-align:center;">{{data.totalStock}}</td>
+              <td style="text-align:center; font-size:10px;">{{data.description}}</td>
+              <td style="text-align:center;"><i class="far fa-edit" (click)="openProduct(data)" title="Edit"></i></td>
+              <td style="text-align:center;"><i class="far fa-trash-alt" title="Delete"
+                  (click)="deleteProduct(data)"></i></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
-          <table class="table">
-              <thead>
-                <tr class="table-secondary">
-                  <th scope="col">Id</th><th scope="col">Question</th><th scope="col">Answer</th><th scope="col">Edit</th><th scope="col">Delete</th>
-                </tr>
-              </thead>
-              <tbody *ngIf="displayData">
-                <tr *ngFor="let data of displayData">
-                  <td>{{data.id}}</td><td>{{data.question}}</td><td>{{data.answer}}</td>
-                  <td><i class="far fa-edit" (click)="openFaq(data)" title="Edit"></i></td>
-                  <td><i class="far fa-trash-alt" title="Delete" (click)="deleteFaq(data)"></i></td>
-                </tr>
-                </tbody>
-              </table>
+      <!-- !Gallery -->
+      <div *ngIf="blockCode == '5'">
+        <div class="row mt-3">
+          <div>
+            <h2>Gallery</h2>
+          </div>
+          <div class="pl-3 pt-3"><i class="fas fa-plus" title="Add" (click)="createGallery()"></i></div>
+        </div>
+        <table class="table">
+          <thead>
+            <tr class="table-secondary">
+              <th scope="col">Id</th>
+              <th scope="col">Customer<span style="font-size:10px;">顾客</span></th>
+              <th scope="col">Event Type</th>
+              <th scope="col">Description<span style="font-size:10px;">描述</span></th>
+              <th scope="col">Edit<span style="font-size:10px;">编辑</span></th>
+              <th scope="col">Delete<span style="font-size:10px;">删除</span></th>
+            </tr>
+          </thead>
+          <tbody *ngIf="displayData">
+            <tr *ngFor="let data of displayData">
+              <td>{{data.prodjectId}}</td>
+              <td>{{data.customerName}}</td>
+              <td *ngIf="data.eventtype">{{data.eventtype.eventName}}</td>
+              <td>{{data.description}}</td>
+              <td><i class="far fa-edit" (click)="openGallery(data)" title="Edit"></i></td>
+              <td><i class="far fa-trash-alt" title="Delete" (click)="deleteGallery(data)"></i></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <!-- !Faq -->
+      <div *ngIf="blockCode == '6'">
+        <div class="row mt-3">
+          <div>
+            <h2>Faq</h2>
+          </div>
+          <div class="pl-3 pt-3">
+            <i class="fas fa-plus" title="Add" (click)="createFaq()"></i>
+          </div>
         </div>
 
-        <!-- !Cart -->
-        <div *ngIf="blockCode == '7'">
-          <div class="mt-3 pt-3"><h2>Carts</h2></div>
-          <table class="table">
-              <thead>
-                <tr class="table-secondary">
-                  <th scope="col">Id</th><th scope="col">CartProds</th><th scope="col">Contact</th> <th scope="col">CreateTime</th>
-                  <th scope="col">Location</th><th>Price</th><th>UpdateTime</th>
-                </tr>
-              </thead>
-              <tbody *ngIf="displayData">
-                <tr *ngFor="let data of displayData">
-                  <td>{{data.cartId}}</td>
-                  <td>
-                    <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          View Products
-                        </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" *ngIf="data.cartProd">
-                          <div *ngFor="let cart of data.cartProd">
-                              <div class="dropdown-item">
-                                <b>Title:</b>{{cart.title}} 
-                                <b>Subtitle:</b>{{cart.subtitle}}
-                                <b>Price:</b>{{cart.price}}
-                                <b>Quantity:</b>{{cart.quantity}}
-                              </div>
-                          </div>
-                          <a class="dropdown-item" *ngIf="data.cartProd.length==0">Empty</a>
-                        </div>
+        <table class="table">
+          <thead>
+            <tr class="table-secondary">
+              <th scope="col">Id</th>
+              <th scope="col">Question<span style="font-size:10px;">问题</span></th>
+              <th scope="col">Answer<span style="font-size:10px;">回答</span></th>
+              <th scope="col">Edit<span style="font-size:10px;">编辑</span></th>
+              <th scope="col">Delete<span style="font-size:10px;">删除</span></th>
+            </tr>
+          </thead>
+          <tbody *ngIf="displayData">
+            <tr *ngFor="let data of displayData">
+              <td>{{data.id}}</td>
+              <td>{{data.question}}</td>
+              <td>{{data.answer}}</td>
+              <td><i class="far fa-edit" (click)="openFaq(data)" title="Edit"></i></td>
+              <td><i class="far fa-trash-alt" title="Delete" (click)="deleteFaq(data)"></i></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <!-- !Cart -->
+      <div *ngIf="blockCode == '7'">
+        <div class="mt-3 pt-3">
+          <h2>Carts</h2>
+        </div>
+        <table class="table">
+          <thead>
+            <tr class="table-secondary">
+              <th scope="col">Id</th>
+              <th scope="col">CartProds</th>
+              <th scope="col">Contact</th>
+              <th>Price</th>
+              <th scope="col">Location</th>
+              <th scope="col">CreateTime</th>
+              <th scope="col">EventDate</th>
+              <th>UpdateTime</th>
+              <th>Delete</th>
+            </tr>
+          </thead>
+          <tbody *ngIf="displayData">
+            <tr *ngFor="let data of displayData">
+              <td>{{data.cartId}}</td>
+              <!---->
+              <td>
+                <div class="dropdown">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    View Products
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" *ngIf="data.cartProd">
+                    <div *ngFor="let cart of data.cartProd">
+                      <div class="dropdown-item">
+                        <b>Title:</b>{{cart.title}}
+                        <b>Subtitle:</b>{{cart.subtitle}}
+                        <b>Price:</b>{{cart.price}}
+                        <b>Quantity:</b>{{cart.quantity}}
                       </div>
-                  </td>
-                  
-                  <td>
-                      <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          View Contact
-                         </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <div class="dropdown-item" *ngIf="data.contact">
-                                <b>Firstname:</b>{{data.contact.firstName}} 
-                                <b>Lastname:</b>{{data.contact.lastName}}
-                                <b>Phone Number:</b>{{data.contact.phoneNum}}
-                                <b>Email:</b>{{data.contact.email}}
-                              </div>
-                           </div>
-                        </div>
-                  </td>
-                  
-                  <td>{{data.createOn | date:'medium'}}</td>
-                  <td>{{data.location}}</td><td>{{data.price}}</td><td>{{data.updateOn | date:'medium'}}</td>
-                  <!-- <td><i class="far fa-edit" (click)="openCart(data)" title="Edit"></i></td> -->
-                  <td><i class="far fa-trash-alt" title="Delete" (click)="deleteCart(data)"></i></td>
-                </tr>
-                </tbody>
-              </table>
-        </div>
-      </main>
-    </div>
+                    </div>
+                    <a class="dropdown-item" *ngIf="data.cartProd.length==0">Empty</a>
+                  </div>
+                </div>
+              </td>
+              <td>
+                <div class="dropdown">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    View Contact
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <div class="dropdown-item" *ngIf="data.contact">
+                      <b>Firstname:</b>{{data.contact.firstName}}
+                      <b>Lastname:</b>{{data.contact.lastName}}
+                      <b>Phone Number:</b>{{data.contact.phoneNum}}
+                      <b>Email:</b>{{data.contact.email}}
+                    </div>
+                  </div>
+                </div>
+              </td>
+
+              <td>{{data.createOn | date:'mediumDate'}}</td>
+              <td>{{data.location}}</td>
+              <td>{{data.price}}</td>
+              <td>{{data.updateOn | date:'mediumDate'}}</td>
+              <!-- <td><i class="far fa-edit" (click)="openCart(data)" title="Edit"></i></td> -->
+              <td><i class="far fa-trash-alt" title="Delete" (click)="deleteCart(data)"></i></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </main>
   </div>
+</div>
