--- a/src/app/fcomponents/login/login.component.html
+++ b/src/app/fcomponents/login/login.component.html
@@ -1,5 +1,6 @@
 <br><br>
 <div class="container">
+    <!-- TODO: add the server error message -->
     <div *ngIf="loginFailed" class="alert alert-danger text-center s2" role="alert">
         {{loginFailedMessage}}
     </div>
