--- a/src/app/fcomponents/admin/admin.component.css
+++ b/src/app/fcomponents/admin/admin.component.css
@@ -22,4 +22,13 @@ th{
     position: sticky;
     top:0;
     z-index:99;
+    text-align:center;
+}
+td{
+    text-align:center;
+}
+.dashhfont{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
