--- a/src/app/fcomponents/admin/admin.component.html
+++ b/src/app/fcomponents/admin/admin.component.html
@@ -119,7 +119,12 @@
           <div>
             <h2>Gallery</h2>
           </div>
-          <div class="pl-3 pt-3"><i class="fas fa-plus" title="Add" (click)="createGallery()"></i></div>
+          <div class="pt-2">
+              <button type="button" class="ml-2" style="border-radius: 5px;" title="Add" (click)="createGallery()">
+                <i class="fas fa-plus"></i>
+                <span>Add</span>
+              </button>
+            </div>
         </div>
         <table class="table">
           <thead>
@@ -151,9 +156,12 @@
           <div>
             <h2>Faq</h2>
           </div>
-          <div class="pl-3 pt-3">
-            <i class="fas fa-plus" title="Add" (click)="createFaq()"></i>
-          </div>
+          <div class="pt-2">
+              <button type="button" class="ml-2" style="border-radius: 5px;" title="Add" (click)="createFaq()">
+                <i class="fas fa-plus"></i>
+                <span>Add</span>
+              </button>
+            </div>
         </div>
 
         <table class="table">
