--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -17,7 +17,7 @@
           aria-haspopup="true" aria-expanded="false">
           <h1 class="s2bold">Hire</h1>
         </div>
-        <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink">
+        <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink" *ngIf="allCategories">
           <!-- !large screen dropdown -->
           <a *ngIf="isBrowser==true" class="dropdown-item d-none d-md-block s2bold" routerLink='/hire'> <h1>All Products</h1></a>
           <a *ngIf="isBrowser==false" class="dropdown-item d-none d-md-block" href='http://luxedreameventhire.co.nz/hire'> All Products</a>
