--- a/src/app/fcomponents/userInfo/userInfo.component.html
+++ b/src/app/fcomponents/userInfo/userInfo.component.html
@@ -2,7 +2,7 @@
   <!-- <div class="row my-5"> &nbsp;</div> -->
   <div class="row">
      <!-- form -->
-          <div class="col-8">
+          <div class="col-12">
             <div class="col-12"> Contact info</div>
           <form class="col-12" novalidate #f="ngForm" (ngSubmit)="onSubmit(f)" style="padding-left:0;">
               <div class="row">
@@ -76,11 +76,11 @@
           </div>
 
         <!-- order summary -->
-        <div class="col-4 border-left">
+        <!-- <div class="col-4 border-left">
           <div class="row">Order Summary</div>
           <div class="row"> <div class="col-5"> <img src="../../../assets/images/productImg1.jpeg" class="w-100"></div></div>
           <div class="row"><div class="col-8"><span>Product1152</span></div> <div class="col-4"></div></div>
           <div class="row"><div class="col-5"><span>Quantity:1</span></div>
-        </div>
-  </div>
+          </div>
+         </div> -->
 </div>
