--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -45,8 +45,8 @@
               <div class="row">
                 <div class="col-3" *ngFor="let spe of specials">
                   <div class="h490">
-                    <img src="../../../../assets/Products/{{spe.productMedia[0].url}}.jpg" [routerLink]="[ '/product/', spe.prodId]">
-                  </div>
+                      <img src="http://localhost:5000/{{spe.productMedia[0].url}}" [routerLink]="[ '/product/', spe.prodId]">
+                    </div>
                   <div class="s1">{{spe.title}}</div>
                   <div>
                     <span class="s2goldbold mr-3">${{spe.price - spe.discount}}</span>
