--- a/src/app/fcomponents/products/product/product.component.html
+++ b/src/app/fcomponents/products/product/product.component.html
@@ -12,7 +12,7 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item h490" *ngFor="let img of prodMediaUrl, index as i" [ngClass]="{'active': i == 0}">
-              <img src="http://localhost:5000/{{img.url}}" class="d-block autofix" alt="...">
+              <img src="http://luxedreameventhire.co.nz:5000/{{img.url}}" class="d-block autofix" alt="...">
           </div>
         </div>
     </div>
