--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -36,7 +36,7 @@
               <div class="carousel-item active overflow-hidden h490" *ngFor="let media of product.productMedia, index as i" [ngClass]="{'active': i == 0}">
                 <!-- TODO: change the baseUrl -->
                 <!-- <img src="../../../../assets/Products/{{media.url}}.jpg" class="d-block autofix"/> -->
-                <img src="http://localhost:5000/{{media.url}}" class="d-block autofix">
+                <img src="http://luxedreameventhire.co.nz:5000/{{media.url}}" class="d-block autofix">
               </div>
             </div>
             </a>
