--- a/src/app/fcomponents/shopping_cart/shopping_cart.component.html
+++ b/src/app/fcomponents/shopping_cart/shopping_cart.component.html
@@ -6,7 +6,7 @@
 
     <div class="row mb-3 productdiv" *ngFor="let prod of prodsInCart; index as i">
       <div class="col-4 col-sm-4 col-md-4 col-lg-3" *ngIf="prod.url">
-        <img src="http://localhost:5000/{{prod.url}}" class="cartProdHeight">
+        <img src="http://luxedreameventhire.co.nz:5000/{{prod.url}}" class="cartProdHeight">
       </div>
       <div class="col-8 col-sm-8 col-md-8 col-lg-9">
         <div class="divdetails"><span class="m2">{{prod.Title}}</span></div>
