--- a/src/app/fcomponents/admin/admin.component.html
+++ b/src/app/fcomponents/admin/admin.component.html
@@ -53,7 +53,7 @@
       <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
         <!-- !Dashboard -->
         <div *ngIf="blockCode == '1'">
-          This is Dashboard<br>
+          Welcome to the dashboard<br>
         </div>
 
         <!-- !Hire || Service || Package-->
