--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -26,6 +26,11 @@
     <div class="s2" style="text-align: center;" *ngIf="errorMessage">
       Sorry, {{errorMessage}}
     </div>
+    <div class="d-flex justify-content-center py-5 mt-5" *ngIf="isLoading">
+        <div class="spinner-border text-info" role="status">
+          <span class="sr-only">Loading...</span>
+        </div>
+      </div>
   <!-- display products -->
   <div class="row py-3">
     <div class='col-12 col-sm-6 col-md-6 col-lg-4 pt-4 pb-2' *ngFor="let product of allProducts; index as i">
