--- a/src/app/fcomponents/products/product/product.component.html
+++ b/src/app/fcomponents/products/product/product.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" #container>
   <div class=" px-0 px-md-5 mx-2">
-  <div class="row mt-5"><div class="col-12 s2goldbold"><a (click)="backClicked()"> Dinnerware and Glassware </a> / Golden Glassline Plate</div></div>
+  <div class="row mt-5"><h3 class="col-12 s2goldbold"><a (click)="backClicked()"> Dinnerware and Glassware </a> / Golden Glassline Plate</h3></div>
   <div class="row my-5">
   <div class="col-12 col-md-6 col-lg-6 p-0">
     <!-- <div (mouseenter)="mouseEnter()" (mouseleave)="mouseLeave()" (mousemove)="mouseMove($event)"> -->
@@ -54,10 +54,10 @@
       <img src="{{defaultImgUrl}}" alt="" #detailImg>
     </div> -->
 
-    <div class="l2">{{productDetail.title}}<br/></div>
+    <h1 class="l2">{{productDetail.title}}<br/></h1>
     <div class="my-4">$<span class="s1"> {{productDetail.price}}</span></div>
     <br/>
-    <div class="s2 mb-2">{{productDetail.description}}</div>
+    <h3 class="s2 mb-2">{{productDetail.description}}</h3>
     <br/>
     <div class="row justify-content-between mt-3">
       <div class="col-6 col-lg-8">
