--- a/src/app/fcomponents/pages/faq/faq.component.html
+++ b/src/app/fcomponents/pages/faq/faq.component.html
@@ -4,14 +4,14 @@
   <div id="panel panel-default">
       <div class="card" *ngFor='let data of faqdata; index as i'>
         <div class="card-header">
-          <h5 class="mb-0">
-            <a class="s1 collapsed" data-toggle="collapse" href="#collapse{{i}}">
-              <i class="fa"></i> {{data.question}}
+          <div class="mb-0">
+            <a class="collapsed" data-toggle="collapse" href="#collapse{{i}}">
+              <h1 class="s2"><i class="fa"></i> {{data.question}}</h1> 
             </a>
-          </h5>
+          </div>
       </div>
         <div id="collapse{{i}}" class="collapse">
-          <div class="card-body s2"><b>A.</b> {{data.answer}}</div>
+          <div class="card-body"><h2 class="s2"><b>A.</b> {{data.answer}}</h2></div>
         </div>
     </div>
     <br><br>
